# streamlit-app-template

./: .dockerignore  Dockerfile  Home.py  README.md  app.py  docker-compose.yml  pyproject.toml  requirements-hf.txt  utils.py
.streamlit/: config.toml
assets/css/: style.css
pages/: 1_📊_Exploratory_Analysis.py  2_📈_Advanced_Visualizations.py  3_🔮_Predictions.py
streamlit_app/: Home.py  data_loader.py  utils.py  visualizations.py
streamlit_app/pages/: 01_Explorer.py  02_Visualiser.py
